dev:
  * add scan subcommand
  * add debug option (--pdb)
  * add exhaustive online documentation
  * add possibility to correlate "R" and "T" rotated components (experimental)
  * add downsample_before option
  * reduce run time of tests
v0.2.1:
  * refactor part of the imaging module
  * rename some kwargs in imaging module
v0.2.0:
  * rename read_stretch to read_dicts
  * remove unnecessary "root" group in HDF5 files
  * change stretch to velocity change inside dictionary returned by read_stretch (sign change)
  * change unit of velocity change and str_range to %
  * corr_vs_time plot: allow to plot stack at top
  * allow strings for length and overlap option in correlate config (e.g. "1h" for one hour)
  * fix: correctly plot gaps in corr_vs_time and sim_mat plots
  * fix: downsample now defaults to None (previous default: 10)
v0.1.2:
  * fix: remove_response option was not working
v0.1.0:
  * initial release