@@ -5,6 +5,8 @@ dev:
   * add possibility to correlate "R" and "T" rotated components (experimental)
   * add downsample_before option
   * reduce run time of tests
+  * fix: timenorm "clip" was not correctly working
+  * fix: timenorm "mute_envelope" was not working with masked data
 v0.2.1:
   * refactor part of the imaging module
   * rename some kwargs in imaging module
